Closed Bug 311063 Opened 20 years ago Closed 20 years ago

Bogus assertions, and tspan attributes x/y/dx/dy aren't live

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jwatt, Assigned: tor)

Details

Attachments

(2 files, 1 obsolete file)

Attached image testcase
We have two problems. First, we're throwing bogus assertions during construction and destruction of tspan elements if they don't have an x or a y attribute. Second, the x/y/dx/dy attributes aren't live on tspan. This testcase demonstrates both these problems. The reason we're throwing assertions is because in nsSVGTSpanFrame::Init() and nsSVGTSpanFrame::~nsSVGTSpanFrame() GetY is returning nsnull. As a result NS_ADD_SVGVALUE_OBSERVER and NS_REMOVE_SVGVALUE_OBSERVER assert.
Attached patch live tspan x/y/dx/dy (obsolete) — Splinter Review
Assignee: general → tor
Status: NEW → ASSIGNED
Attached patch add null checksSplinter Review
Attachment #198456 - Attachment is obsolete: true
Attachment #198461 - Flags: review?(alex)
Comment on attachment 198461 [details] [diff] [review] add null checks r=afri
Attachment #198461 - Flags: review?(alex) → review+
Checked in on trunk.
Comment on attachment 198461 [details] [diff] [review] add null checks DOM compliance issue, low risk.
Attachment #198461 - Flags: approval1.8rc1?
Comment on attachment 198461 [details] [diff] [review] add null checks too late for non-critical changes.
Attachment #198461 - Flags: approval1.8rc1? → approval1.8rc1-
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: