Bug 311063 - tspan attributes x/y/dx/dy are not live.  r=afri